--- a/index.html
+++ b/index.html
@@ -32,197 +32,15 @@
         </div>
       </div>
       <div class="tabs scroll-tabs" id="tabsContainer" style="visibility:hidden;">
-        <button class="tab-button active" data-target="dailyPanel">Routine</button>
-        <button class="tab-button" data-target="projectsPanel">Projects</button>
-        <button class="tab-button" data-target="calendarPanel">Calendar</button>
-        <button class="tab-button" data-target="metricsPanel">Metrics</button>
-        <button class="tab-button" data-target="listsPanel">Lists</button>
-        <button class="tab-button" data-target="travelPanel">Places</button>
-        <button class="tab-button" data-target="moviesPanel">Movies</button>
+        <button class="tab-button active" data-target="moviesPanel">Movies</button>
         <button class="tab-button" data-target="showsPanel">Live Music</button>
         <button class="tab-button" data-target="recipesPanel">Recipes</button>
-        <button class="tab-button" data-target="planningPanel">Finances</button>
-        <button class="tab-button" data-target="budgetPanel">Budget</button>
-        <button class="tab-button" data-target="backupsPanel">Backups</button>
-        <button class="tab-button" data-target="geoscorePanel">GeoScore</button>
-        <button class="tab-button" data-target="geolayersPanel">GeoLayers</button>
+        <button class="tab-button" data-target="restaurantsPanel">Restaurants</button>
       </div>
     </nav>
 
     <!-- TABS CONTENT PANELS -->
-      <!-- Hide routine panel by default to prevent flashing before JS initializes -->
-      <div id="dailyPanel" class="main-layout" style="display:none;">
-      <div class="full-column">
-        <div class="panel-header">
-          <h2>Routine Tasks</h2>
-          <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-        </div>
-        <h3>Daily</h3>
-        <div id="dailyTasksList" class="decision-container"></div>
-        <h3>Weekly</h3>
-        <div id="weeklyTasksList" class="decision-container"></div>
-        <h3 style="margin-top:2em;">Monthly</h3>
-        <div id="monthlyTasksList" class="decision-container"></div>
-        <details id="hiddenTasksSection">
-          <summary>Hidden Tasks</summary>
-          <div id="hiddenTasksList" class="decision-container"></div>
-        </details>
-        <details id="completedTasksSection">
-          <summary>Completed Tasks</summary>
-          <div id="completedTasksList" class="decision-container"></div>
-        </details>
-      </div>
-    </div>
-
-
-    <!-- PROJECTS PANEL -->
-      <div id="projectsPanel" class="main-layout" style="display:none;">
-      <div class="full-column">
-        <div id="projectsHeaderRow" class="panel-header">
-          <h2 id="projectsHeader">Projects</h2>
-          <div class="header-actions">
-            <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-          </div>
-        </div>
-
-        <div id="goalList" class="decision-container"></div>
-        <div class="wizard-panel">
-          <button id="addProjectBtn" style="display:none;">+ Add Project</button>
-        </div>
-
-          <div id="projectWizardModal" class="modal" style="display:none;">
-          <div class="modal-content">
-            <div id="wizardStep"></div>
-            <div class="button-row">
-              <button type="button" id="wizardBackBtn" style="display: none;">Back</button>
-              <button type="button" id="wizardCancelBtn">Cancel</button>
-              <button type="button" id="wizardNextBtn">Next</button>
-            </div>
-          </div>
-        </div>
-
-        <hr style="margin: 40px 0;" />
-
-        <div id="completedList" class="decision-container"></div>
-      </div>
-    </div>
-
-
-    <!-- CALENDAR PANEL -->
-    <div id="calendarPanel" class="main-layout" style="display:none;">
-      <div class="calendar-mobile-tabs">
-        <button type="button" id="calendarDailyTab" class="calendar-mobile-tab active">Daily</button>
-        <button type="button" id="calendarHourlyTab" class="calendar-mobile-tab">Hourly</button>
-      </div>
-      <div class="left-column">
-        <div id="calendarHeaderRow" class="panel-header">
-          <h2>Calendar</h2>
-          <div class="header-actions">
-              <button id="calendarAddProjectBtn">+ Add Project</button>
-            <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-          </div>
-        </div>
-        <div id="calendarContent"></div>
-      </div>
-      <div class="right-column">
-        <div id="todaySchedule"></div>
-      </div>
-
-
-    </div>
-
-
-    <!-- METRICS PANEL -->
-      <div id="metricsPanel" class="main-layout" style="display:none;">
-      <div class="full-column">
-        <div class="panel-header">
-          <h2>Metrics</h2>
-          <div class="header-actions">
-            <button id="metricPrevDayBtn" class="icon-button">◀️</button>
-            <span id="metricsDateLabel"></span>
-            <button id="metricNextDayBtn" class="icon-button">▶️</button>
-            <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-          </div>
-        </div>
-        <div id="genericStatsSummary"></div>
-        <div id="metricsConfigSection"></div>
-        <div id="metricsReport" class="report-panel"></div>
-      </div>
-    </div>
-
-    <!-- Modal for metric charts -->
-    <div id="metricChartModal" class="modal" style="display:none;">
-      <div class="modal-content" style="max-width:600px;width:90%;">
-        <canvas id="metricChartCanvas" width="500" height="300"></canvas>
-      </div>
-    </div>
-
-    <!-- Modal for metric values -->
-    <div id="metricValuesModal" class="modal" style="display:none;">
-      <div class="modal-content" style="max-width:400px;width:90%;max-height:80vh;overflow:auto;">
-        <div id="metricValuesList"></div>
-      </div>
-    </div>
-
-    <!-- LISTS PANEL -->
-      <div id="listsPanel" class="main-layout" style="display:none">
-      <div class="full-column">
-        <div class="panel-header">
-          <h2>Lists</h2>
-          <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-        </div>
-        <!-- lists.js will inject the form and rendered lists here -->
-        <div id="listsReport" class="report-panel"></div>
-      </div>
-    </div>
-
-    <!-- TRAVEL PANEL -->
-      <div id="travelPanel" class="main-layout" style="display:none">
-        <div class="full-column">
-          <div class="panel-header">
-            <h2>Places</h2>
-            <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-          </div>
-          <div id="placeSearchRow">
-            <input id="placeSearch" type="text" placeholder="Search all places or coordinates...">
-            <button type="button" id="placeSearchBtn">Search</button>
-            <button type="button" id="clearPlaceSearch">Clear</button>
-          </div>
-        <ul id="placeResults" class="search-results"></ul>
-        <h3 id="tripAdvisorHeader" style="margin-top:1em;">Popular Nearby Places</h3>
-        <ul id="tripAdvisorList" class="search-results"></ul>
-        <div id="travelMapWrapper">
-          <div id="travelMap"></div>
-          <div id="travelTagFilters"></div>
-        </div>
-        <input id="travelSearch" type="text" placeholder="Filter list..." style="margin:8px 0;max-width:260px;">
-        <label id="showVisitedLabel">
-          <input id="showVisitedToggle" type="checkbox">
-          <span>Include visited</span>
-        </label>
-        <div id="placeCount" style="margin:8px 0;"></div>
-        <div id="paginationControls" style="margin:8px 0; display:flex; align-items:center; gap:8px;">
-          <button type="button" id="prevPageBtn">Prev</button>
-          <span id="pageInfo"></span>
-          <button type="button" id="nextPageBtn">Next</button>
-        </div>
-          <table id="travelTable">
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Description</th>
-              <th>Tags</th>
-              <th>Rating</th>
-              <th>Date</th>
-              <th>Visited</th>
-              <th>Distance (mi)</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-          </table>
-      </div>
-    </div>
+    <!-- MOVIES PANEL -->
 
     <!-- MOVIES PANEL -->
       <div id="moviesPanel" class="main-layout" style="display:none">
@@ -275,7 +93,7 @@
       <div id="ticketmasterList" class="decision-container"></div>
         </div>
       </div>
-      <!-- RECIPES PANEL -->
+    <!-- RECIPES PANEL -->
       <div id="recipesPanel" class="main-layout" style="display:none;">
         <div class="full-column">
           <div class="panel-header">
@@ -299,63 +117,32 @@
         </div>
       </div>
 
-    <!-- FINANCES PANEL -->
-      <div id="planningPanel" class="main-layout" style="display:none">
+    <!-- RESTAURANTS PANEL -->
+      <div id="restaurantsPanel" class="main-layout" style="display:none;">
         <div class="full-column">
           <div class="panel-header">
-            <h2>Finances</h2>
+            <h2>Restaurants</h2>
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
           </div>
-          <div id="planningContainer"></div>
-        </div>
-      </div>
-
-      <div id="budgetPanel" class="main-layout" style="display:none">
-        <div class="full-column">
-          <div class="panel-header">
-            <h2>Budget</h2>
-            <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-          </div>
-          <div id="budgetContainer"></div>
-        </div>
-      </div>
-
-      <!-- BACKUPS PANEL -->
-      <div id="backupsPanel" class="main-layout" style="display:none">
-        <div class="full-column">
-          <div class="panel-header">
-            <h2>Backups</h2>
-            <div class="header-actions">
-              <button id="backupNowBtn">Backup Now</button>
-              <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
+          <div id="restaurantsForm" style="margin-bottom:1rem; display:flex; flex-wrap:wrap; gap:0.5rem; align-items:flex-end;">
+            <div>
+              <label for="restaurantsCity" style="display:block; font-size:0.85rem;">City</label>
+              <input type="text" id="restaurantsCity" placeholder="e.g. Austin" />
             </div>
+            <div>
+              <label for="restaurantsCuisine" style="display:block; font-size:0.85rem;">Cuisine</label>
+              <input type="text" id="restaurantsCuisine" placeholder="Optional" />
+            </div>
+            <div id="restaurantsApiKeyContainer" style="display:inline-flex; flex-direction:column;">
+              <label for="restaurantsApiKey" style="font-size:0.85rem;">API Key</label>
+              <input type="text" id="restaurantsApiKey" placeholder="API Ninjas Key" />
+              <span style="font-size:0.75rem; margin-top:0.25rem;">Get one at <a href="https://api-ninjas.com/profile" target="_blank" rel="noopener noreferrer">api-ninjas.com</a></span>
+            </div>
+            <button type="button" id="restaurantsSearchBtn" aria-label="Search restaurants">Search</button>
           </div>
-          <ul id="backupList"></ul>
+          <div id="restaurantsResults" class="decision-container"></div>
         </div>
       </div>
-
-      <!-- GEOSCORE PANEL -->
-      <div id="geoscorePanel" class="main-layout" style="display:none;">
-        <div class="full-column">
-          <div class="panel-header">
-            <h2>GeoScore Admin</h2>
-            <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-          </div>
-          <div id="geoscoreAdmin"></div>
-        </div>
-      </div>
-
-      <!-- GEOLAYERS PANEL -->
-      <div id="geolayersPanel" class="main-layout" style="display:none;">
-        <div class="full-column">
-          <div class="panel-header">
-            <h2>GeoLayers Game</h2>
-            <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-          </div>
-          <iframe src="geolayers-game/public/index.html" style="width:100%;height:80vh;border:none;"></iframe>
-        </div>
-      </div>
-
 
   </section>
 
@@ -378,44 +165,6 @@
       </div>
     </div>
   </div>
-  <!-- Lists modal for adding lists or items -->
-  <div id="listsFormModal" class="modal" style="display:none;">
-    <div id="listsFormWrapper" class="modal-content" style="max-height:80vh;overflow:auto"></div>
-  </div>
-
-  <!-- Modal for adding a place -->
-  <div id="addPlaceModal" class="modal" style="display:none;">
-    <div class="modal-content" style="max-height:80vh;overflow:auto;">
-      <h3>Add Place</h3>
-      <form id="addPlaceForm">
-        <div style="margin-bottom:8px;">
-          <label>Name<br><input type="text" id="placeName" required /></label>
-        </div>
-        <div style="margin-bottom:8px;">
-          <label>Description<br><input type="text" id="placeDescription" /></label>
-        </div>
-        <div style="margin-bottom:8px;">
-          <label>Categories</label>
-          <div id="placeTags"></div>
-          <input type="text" id="extraTags" placeholder="Additional categories (comma separated)" style="margin-top:8px;width:100%;" />
-        </div>
-        <div style="margin-bottom:8px;">
-          <label>Rating<br><input type="text" id="placeRating" /></label>
-        </div>
-        <div style="margin-bottom:8px;">
-          <label>Date<br><input type="date" id="placeDate" /></label>
-        </div>
-        <div style="margin-bottom:8px;">
-          <label><input type="checkbox" id="placeVisited" /> Visited</label>
-        </div>
-        <div class="modal-actions" style="margin-top:1em;">
-          <button type="button" id="placeCancel">Cancel</button>
-          <button type="submit">Save</button>
-        </div>
-      </form>
-    </div>
-  </div>
-
   <div id="contactModal" class="modal" style="display:none;">
     <div class="modal-content" style="max-width:400px;width:90%;max-height:80vh;overflow:auto;">
       <h3>Contact Developer</h3>
@@ -437,18 +186,12 @@
     </div>
   </div>
   <script src="https://apis.google.com/js/api.js"></script>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script type="module" src="js/main.js"></script>
-  <script type="module" src="js/lists.js"></script>
-  <script type="module" src="js/travel.js"></script>
   <script type="module" src="js/movies.js"></script>
   <script type="module" src="js/shows.js"></script>
   <script type="module" src="js/recipes.js"></script>
+  <script type="module" src="js/restaurants.js"></script>
   <script type="module" src="js/weather.js"></script>
-  <script type="module" src="js/planning.js"></script>
-  <script type="module" src="js/budget.js"></script>
-  <script type="module" src="js/backups.js"></script>
-  <script type="module" src="js/geoscore.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
