Handle recipe API key fallback

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div id="recipesApiKeyContainer" style="display:inline-block;">
             <input type="text" id="recipesApiKey" placeholder="API Key" style="margin-right:.5rem;">
             <div id="recipesApiKeyInstructions" style="font-size:0.8rem;margin-top:0.5rem;">
-              Get a free API key from <a href="https://api-ninjas.com/profile" target="_blank" rel="noopener noreferrer">API Ninjas</a>.
+              Provide an API key from <a href="https://api-ninjas.com/profile" target="_blank" rel="noopener noreferrer">API Ninjas</a> if recipe search asks for one.
             </div>
           </div>
           <button type="button" id="recipesSearchBtn" aria-label="Search recipes">Search</button>
