--- a/index.html
+++ b/index.html
@@ -124,25 +124,26 @@
             <h2>Restaurants</h2>
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
           </div>
-          <div id="restaurantsForm" style="margin-bottom:1rem; display:flex; flex-wrap:wrap; gap:0.5rem; align-items:flex-end;">
-            <div>
-              <label for="restaurantsCity" style="display:block; font-size:0.85rem;">City</label>
-              <input type="text" id="restaurantsCity" placeholder="e.g. Austin" />
-            </div>
-            <div>
-              <label for="restaurantsCuisine" style="display:block; font-size:0.85rem;">Cuisine</label>
-              <input type="text" id="restaurantsCuisine" placeholder="Optional" />
-            </div>
-            <div id="restaurantsApiKeyContainer" style="display:inline-flex; flex-direction:column;">
-              <label for="restaurantsApiKey" style="font-size:0.85rem;">API Key</label>
-              <input type="text" id="restaurantsApiKey" placeholder="API Ninjas Key" />
-              <span style="font-size:0.75rem; margin-top:0.25rem;">Get one at <a href="https://api-ninjas.com/profile" target="_blank" rel="noopener noreferrer">api-ninjas.com</a></span>
-            </div>
-            <button type="button" id="restaurantsSearchBtn" aria-label="Search restaurants">Search</button>
-          </div>
-          <div id="restaurantsResults" class="decision-container"></div>
+      <div id="restaurantsForm" style="margin-bottom:1rem; display:flex; flex-wrap:wrap; gap:0.5rem; align-items:flex-end;">
+        <div>
+          <label for="restaurantsCity" style="display:block; font-size:0.85rem;">City</label>
+          <input type="text" id="restaurantsCity" placeholder="e.g. Austin" />
         </div>
+        <div>
+          <label for="restaurantsCuisine" style="display:block; font-size:0.85rem;">Cuisine</label>
+          <input type="text" id="restaurantsCuisine" placeholder="Optional" />
+        </div>
+        <div id="restaurantsApiKeyContainer" style="display:inline-flex; flex-direction:column;">
+          <label for="restaurantsApiKey" style="font-size:0.85rem;">Yelp API Key (optional)</label>
+          <input type="text" id="restaurantsApiKey" placeholder="Leave blank to use server key" />
+          <span style="font-size:0.75rem; margin-top:0.25rem;">You can generate one at <a href="https://www.yelp.com/developers/v3/manage_app" target="_blank" rel="noopener noreferrer">Yelp Fusion</a>.</span>
+        </div>
+        <button type="button" id="restaurantsSearchBtn" aria-label="Search restaurants">Search</button>
+        <div style="font-size:0.75rem; max-width:260px;">Powered by Yelp Fusion. The server will use its configured <code>YELP_API_KEY</code> by default; enter your own here to override.</div>
       </div>
+      <div id="restaurantsResults" class="decision-container"></div>
+    </div>
+  </div>
 
   </section>
 
