--- a/report.html
+++ b/report.html
@@ -79,6 +79,7 @@
     </div>
 
     <!-- Script entry point -->
+    <script src="js/firebase-config.js"></script>
     <script type="module" src="js/main.js"></script>
   </body>
 
