--- a/restore.html
+++ b/restore.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <script src="js/firebase-config.js"></script>
     <script type="module">
         (async () => {
             const key = prompt('Enter your backup key:');
