--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@
             <h2>Live Music</h2>
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
           </div>
-          <div id="ticketmasterForm" style="margin-bottom:1rem;">
+          <div id="ticketmasterForm" style="margin-bottom:1rem;display:flex;align-items:center;gap:.5rem;">
             <button type="button" id="spotifyTokenBtn" style="margin-right:.5rem;">Login to Spotify</button>
-            <span id="spotifyStatus" style="margin-right:.5rem;"></span>
-            <input type="password" id="spotifyToken" placeholder="Spotify Access Token" style="margin-right:.5rem;">
+            <span id="spotifyStatus"></span>
             <input type="password" id="ticketmasterApiKey" placeholder="Ticketmaster API Key" style="margin-right:.5rem;">
           </div>
           <div id="showsTabs" class="movie-tabs">
