--- a/index.html
+++ b/index.html
@@ -84,18 +84,10 @@
             <h2>Live Music</h2>
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
           </div>
-          <div id="ticketmasterForm" style="margin-bottom:1rem;display:flex;align-items:center;gap:.5rem;flex-wrap:wrap;">
+          <div id="ticketmasterForm" style="margin-bottom:1rem;display:flex;align-items:center;gap:.5rem;">
             <button type="button" id="spotifyTokenBtn" style="margin-right:.5rem;">Login to Spotify</button>
             <span id="spotifyStatus"></span>
             <input type="password" id="ticketmasterApiKey" placeholder="Ticketmaster API Key" style="margin-right:.5rem;">
-            <button
-              type="button"
-              id="discoverShowsBtn"
-              data-default-label="Discover Shows"
-              data-loading-label="Discovering…"
-            >
-              Discover Shows
-            </button>
           </div>
           <div id="showsTabs" class="movie-tabs">
             <button type="button" class="movie-tab shows-tab active" data-target="showsFeedSection">Discover</button>
