Add manual refresh for live music suggestions

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <span id="spotifyStatus" style="margin-right:.5rem;"></span>
             <input type="password" id="spotifyToken" placeholder="Spotify Access Token" style="margin-right:.5rem;">
             <input type="password" id="ticketmasterApiKey" placeholder="Ticketmaster API Key" style="margin-right:.5rem;">
+            <button type="button" id="ticketmasterDiscoverBtn" class="shows-discover-btn">Discover</button>
           </div>
           <div id="showsTabs" class="movie-tabs">
             <button type="button" class="movie-tab shows-tab active" data-target="showsFeedSection">Discover</button>
