Hide TMDB API key input

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>
           <div id="moviesForm" style="margin-bottom:1rem;">
             <div id="moviesApiKeyContainer" style="display:inline-block;">
-              <input type="text" id="moviesApiKey" placeholder="TMDB API Key" style="margin-right:.5rem;">
+              <input type="password" id="moviesApiKey" placeholder="TMDB API Key" style="margin-right:.5rem;">
             </div>
           </div>
           <div id="movieTabs" class="movie-tabs">
