--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <div id="movieList" class="decision-container"></div>
           </div>
           <div id="savedMoviesSection" style="display:none;">
+            <div id="savedMoviesFilters" class="genre-filter"></div>
             <div id="savedMoviesList" class="decision-container"></div>
           </div>
           <div id="watchedMoviesSection" style="display:none;">
