--- a/index.html
+++ b/index.html
@@ -144,8 +144,6 @@
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
           </div>
           <div id="ticketmasterForm" style="margin-bottom:1rem;">
-            <button type="button" id="spotifyTokenBtn" style="margin-right:.5rem;">Login to Spotify</button>
-            <span id="spotifyStatus" class="shows-status" style="margin-right:.5rem;"></span>
             <input type="password" id="ticketmasterApiKey" placeholder="Ticketmaster API Key" style="margin-right:.5rem;">
             <button type="button" id="ticketmasterDiscoverBtn" class="shows-discover-btn">Discover</button>
           </div>
@@ -172,6 +170,10 @@
           </div>
           <div id="showsInterestedSection" style="display:none;">
             <div id="ticketmasterInterestedList" class="decision-container"></div>
+          </div>
+          <div class="shows-spotify-footer">
+            <span id="spotifyStatus" class="shows-status"></span>
+            <button type="button" id="spotifyTokenBtn">Login to Spotify</button>
           </div>
         </div>
       </div>
