Rename restaurants saved tab to To Visit

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               aria-selected="false"
               aria-controls="restaurantsSaved"
             >
-              Saved
+              To Visit
             </button>
             <button
               type="button"
