Replace live music tab with Eventbrite-only search

--- a/index.html
+++ b/index.html
@@ -156,34 +156,8 @@
               Use the personal OAuth token (sometimes labelled <em>private token</em>) from your Eventbrite account settings.
             </p>
           </div>
-          <div id="showsConfigControls" class="shows-config">
-            <div class="shows-config__field">
-              <label for="showsRadius">Search radius (miles)</label>
-              <input type="number" id="showsRadius" min="25" max="1000" step="25" value="300" inputmode="numeric">
-            </div>
-            <div class="shows-config__field">
-              <label for="showsArtistLimit">Top artists to scan</label>
-              <input type="number" id="showsArtistLimit" min="1" max="200" step="1" value="10" inputmode="numeric">
-            </div>
-            <label class="shows-config__toggle" for="showsIncludeSuggestions">
-              <input type="checkbox" id="showsIncludeSuggestions" checked>
-              <span>Show Spotify recommendations when no events are nearby</span>
-            </label>
-          </div>
-          <div id="showsTabs" class="movie-tabs">
-            <button type="button" class="movie-tab shows-tab active" data-target="showsFeedSection">Discover</button>
-            <button type="button" class="movie-tab shows-tab" data-target="showsInterestedSection">Your Live Music Events</button>
-          </div>
-          <div id="showsFeedSection">
-            <div id="eventbriteList" class="decision-container"></div>
-          </div>
-          <div id="showsInterestedSection" style="display:none;">
-            <div id="eventbriteInterestedList" class="decision-container"></div>
-          </div>
-          <div class="shows-spotify-footer">
-            <span id="spotifyStatus" class="shows-status"></span>
-            <button type="button" id="spotifyTokenBtn">Login to Spotify</button>
-          </div>
+          <div id="eventbriteStatus" class="shows-status" role="status" aria-live="polite"></div>
+          <div id="eventbriteList" class="decision-container"></div>
         </div>
       </div>
     <!-- RESTAURANTS PANEL -->
