--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
         <div id="movieStreamSection">
           <div class="media-stream">
             <aside class="media-stream__filters">
-              <div id="movieFeedControls" class="movie-controls movie-filter-controls">
-                <div class="movie-filter-field">
+              <div id="movieFeedControls" class="movie-controls movie-filter-controls media-filter-toolbar">
+                <div class="movie-filter-field movie-filter-genre media-filter-toolbar__item">
+                  <span class="movie-filter-label">Genre</span>
+                  <div id="movieFilterGenre" class="genre-filter"></div>
+                </div>
+                <div class="movie-filter-field media-filter-toolbar__item">
                   <label for="movieFilterMinRating">Min Rating</label>
                   <input
                     type="number"
@@ -68,10 +72,10 @@
                     max="10"
                     step="0.1"
                     inputmode="decimal"
-                    placeholder="e.g. 7"
+                    placeholder="8"
                   />
                 </div>
-                <div class="movie-filter-field">
+                <div class="movie-filter-field media-filter-toolbar__item">
                   <label for="movieFilterMinVotes">Min Votes</label>
                   <input
                     type="number"
@@ -83,7 +87,7 @@
                     placeholder="e.g. 100"
                   />
                 </div>
-                <div class="movie-filter-field">
+                <div class="movie-filter-field media-filter-toolbar__item">
                   <label for="movieFilterStartYear">Earliest Year</label>
                   <input
                     type="number"
@@ -93,7 +97,7 @@
                     placeholder="e.g. 2010"
                   />
                 </div>
-                <div class="movie-filter-field">
+                <div class="movie-filter-field media-filter-toolbar__item">
                   <label for="movieFilterEndYear">Latest Year</label>
                   <input
                     type="number"
@@ -102,10 +106,6 @@
                     inputmode="numeric"
                     placeholder="e.g. 2024"
                   />
-                </div>
-                <div class="movie-filter-field movie-filter-genre">
-                  <span class="movie-filter-label">Genre</span>
-                  <div id="movieFilterGenre" class="genre-filter"></div>
                 </div>
               </div>
               <div id="movieStats" class="media-stats" aria-live="polite"></div>
@@ -238,19 +238,6 @@
           <div class="panel-header">
             <h2>Live Music</h2>
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
-          </div>
-          <div id="eventbriteForm" style="margin-bottom:1rem;">
-            <input
-              type="password"
-              id="eventbriteApiToken"
-              placeholder="Eventbrite personal token"
-              style="margin-right:.5rem;"
-              aria-describedby="eventbriteTokenHelp"
-            >
-            <button type="button" id="eventbriteDiscoverBtn" class="shows-discover-btn">Discover</button>
-            <p id="eventbriteTokenHelp" class="shows-token-help">
-              Use the personal OAuth token (sometimes labelled <em>private token</em>) from your Eventbrite account settings.
-            </p>
           </div>
           <div id="eventbriteStatus" class="shows-status" role="status" aria-live="polite"></div>
           <details id="eventbriteDebug" class="shows-debug" hidden>
